--- a/Site/style.css
+++ b/Site/style.css
@@ -5,11 +5,22 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
-ul {
-    z-index: 1;
-    position: fixed;
+.holder{
+    position: sticky;
     top: 0;
+    z-index: 1;
+}
+.adreskontaktwy{
+    height: 25px;
+    background-color: rgb(180, 180, 180);
+    padding: 3px;
+    overflow: auto;
+
+}
+.adreskontaktwy p{
+    font-size: 15px;
+}
+ul {
     width: 100%;
   }
 
@@ -42,21 +53,30 @@ ul.topnav li.right {
 }
 
 .wrapper{
-    padding-left: 5vw;
-    padding-right: 5vw;
+    /* padding-left: 5vw;
+    padding-right: 5vw; */
 }
 
 .wrapper #videoBG{
     z-index: -2;
-    opacity: 0.75;
     height: auto;
+    filter: blur(2px) saturate(1.2);
     width: 100%;
 }
 .wrapper section{
+    padding: 20px;
     overflow: auto;
+    margin: 50px 0px 50px 0;
+}
+.wrapper section:nth-child(2n){
+    background-color: rgb(255, 183, 213);
 }
 .wrapper section p{
     font-size: 16px;
+}
+
+.wrapper section#idea div{
+    margin: 20px 0px 20px 0px;
 }
 
 .wrapper section .section-title{
@@ -82,6 +102,12 @@ ul.topnav li.right {
     width: 100%;
 }
 
+.wrapper section .div-right .kontakt-form div *{
+    width: 100%;
+}
+.wrapper section .div-right .kontakt-form div textarea{
+    height: 100px;
+}
 @media screen and (max-width:800px)
 {
     .wrapper section .div-left,.div-right{
@@ -90,7 +116,7 @@ ul.topnav li.right {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     ul.topnav li.right, 
     ul.topnav li {float: none;}
 }
