--- a/Site/style.css
+++ b/Site/style.css
@@ -119,4 +119,8 @@ ul.topnav li.right {
 @media screen and (max-width: 800px) {
     ul.topnav li.right, 
     ul.topnav li {float: none;}
+    .holder{
+        position: relative;
+    }
+
 }
