--- a/Site/style.css
+++ b/Site/style.css
@@ -64,6 +64,7 @@ ul.topnav li.right {
 .wrapper .vid{
     position: relative;
     text-align: center;
+    text-align: -webkit-center;
 }
 .wrapper .vid .centered{
     position: absolute;
@@ -75,6 +76,7 @@ ul.topnav li.right {
 .wrapper .vid .centered p{
     height: 100px;
     text-align: center;
+    text-align: -webkit-center;
     font-size: 50px;
     font-weight: 900;
     color: white;
