--- a/Site/style.css
+++ b/Site/style.css
@@ -4,6 +4,7 @@
     font-size: 20px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 .holder{
     position: sticky;
@@ -40,7 +41,7 @@ ul.topnav li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 15px;
     font-size: 17px;
     text-decoration: none;
 }
@@ -53,6 +54,10 @@ ul.topnav li.right {
     margin-right: 0px;
 }
 
+.holder img{
+    height: inherit;
+    float: right;
+}
 
 
 .wrapper #videoBG{
@@ -149,6 +154,28 @@ ul.topnav li.right {
     width: 80%;
     display: block;
     margin: 0 auto;
+}
+
+.wrapper .store-icon{
+    width: 50%;
+    margin: 0px;
+    float: left;
+    text-align: right;
+}.wrapper .store-icon img{
+    width: 50%;
+
+}
+
+.wrapper .store-button{
+    text-align: left;
+    float: right;
+    width: 50%;
+    height: inherit;
+}
+
+.wrapper .store-button a img{
+    width: 50%;
+    text-align: left;
 }
 
 .wrapper section .div-right .kontakt-form div *{
