--- a/Site/style.css
+++ b/Site/style.css
@@ -10,18 +10,20 @@ nav li, a{
     font-weight: 300;
 }
 header{
+    z-index: 1;
     width: 100%;
     position: fixed;
     display: flex;
-    font-size: 16px;
+    font-size: 20px;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 1vw;
-    background-color: #0c2461;
+    padding: 10px 3vw;
+    background-color: #0a3d62;
 }
 .logo{
     cursor: pointer;
-    height: 60px;
+    max-height: 60px;
+    max-width: 15vw;
 }
 
 .nav_links{
@@ -36,36 +38,81 @@ header{
     transition: all 0.3s ease 0s;
 }
 .nav_links li a:hover{
-    color: #6a89cc;
+    color: #82ccdd;
 }
 
+#section_0{
+    background-color: #0a3d62;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+}
+#section_0 video{
+    width: 100%;
+    opacity: 0.6;
+    margin-top: 60px;
+}
+
+.wrapper{
+    background-color: white;
+}
 .wrapper section{
     height: 100vh;
+    margin-bottom: 30px;
+    background-color: #dce1f0;
+    padding: 30px;
+}
+#section_1{
+    display: flex;
+    flex-direction: column;
 }
 
-#section_1{
- background-color: blanchedalmond;   
+#section_1 h1{
+    font-size: 66px;
+    font-weight: 300;
+    text-align: center;
+
+}
+#section_1 h4{
+    font-size: 35px;
+    font-weight: 300;
+    text-align: center;
+}
+#section_1 p{
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: justify;
 }
 #section_2{
-    background-color: rgb(93, 187, 50);   
+ 
 }
 #section_3{
-    background-color: rgb(184, 75, 235);   
+ 
 }
 #section_4{
-    background-color: rgb(220, 255, 66);   
+ 
 }
 #section_5{
-    background-color: rgb(233, 64, 100);   
+  
 }
 #section_6{
-    background-color: rgb(255, 196, 0);   
+ 
 }
 #section_7{
-    background-color: rgb(64, 137, 233);   
+ margin-bottom: 0px;
 }
 
 @media screen and (max-width:800px)
 {
+    header{
+        display: none;
+    }
+}
 
+@media screen and (max-width:1100px)
+{
+    header{
+        font-size: 13px;
+    }
 }
