--- a/Site/style.css
+++ b/Site/style.css
@@ -60,7 +60,7 @@ nav li, a{
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
-    opacity: 0.65;
+    opacity: 0.55;
 }
 .section_0 .bg_color{
     position: absolute;
@@ -143,7 +143,7 @@ nav li, a{
     background-color: #002e63d3;
     border-radius: 12px;
     border: rgb(141, 141, 141) 2px solid;
-    margin:0;
+    margin:15px 0 0 0;
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -157,7 +157,7 @@ nav li, a{
     background-color: #002e63d3;
     border-radius: 12px;
     border: rgb(141, 141, 141) 2px solid;
-    margin:0 0 0 35%;
+    margin:15px 0 0 35%;
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -166,9 +166,9 @@ nav li, a{
     text-transform: uppercase;
 }
 
-/* .wrapper section{
+.wrapper section{
     height: 100vh;
     margin-bottom: 30px;
     background-color: #dce1f0;
     padding: 30px;
-} */
+}
