--- a/Site/style.css
+++ b/Site/style.css
@@ -250,11 +250,11 @@ nav li, a{
 }
 
 .section_1_2_content p{
-    width: 80%;
+    width: 70%;
 }
 
 .section_1_2_content_child2{
     margin: 0 0 0 auto;
-    padding: 30px;
+    padding: 30px 0 30px 0;
     text-align: justify;
 }
