--- a/Site/style.css
+++ b/Site/style.css
@@ -258,3 +258,28 @@ nav li, a{
     padding: 30px 0 30px 0;
     text-align: justify;
 }
+
+.section_2_1_title h1{
+    font-weight: 400;
+    font-size: 57px;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.section_2_1_youtube_video{
+    text-align: center;
+}
+
+.section_2_1_youtube_video{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .section_2_1_youtube_video iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
