--- a/Site/style.css
+++ b/Site/style.css
@@ -199,6 +199,10 @@ nav li, a{
     background-color: #ffffff;
 }
 
+.wrapper p{
+    font-size: 1.2em;
+}
+
 .section_1_1_title
 {
     display: flex;
@@ -275,11 +279,76 @@ nav li, a{
     width: 100%;
     padding-bottom: 56.25%; 
     height: 0;
-  }
+}
   .section_2_1_youtube_video iframe{
     position: absolute;
     top:0;
     left: 0;
     width: 100%;
     height: 100%;
-  }
+}
+
+.section_3_1_content_3
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+.section_3_1_title h1{
+    font-weight: 400;
+    margin: auto -20px auto -20px;
+    font-size: 57px;
+    text-align: center;
+    padding-bottom: 30px;
+    text-align: center;
+}
+.section_3_1_content_1{
+    text-align: justify;
+    padding-bottom: 30px;
+}
+
+.section_3_1_content_2{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 30px;
+}
+.section_3_1_content_2 div{
+    width: 48%;
+    justify-content: space-between;
+}
+
+.section_3_1_content_2 div p{
+    text-align: justify;
+}
+
+.section_3_1_content_3 div{
+    background-color: #002e63;
+    color: white;
+    padding:20px 30px;
+    border-radius: 12px;
+    font-weight: 400;
+}
+
+.section_3_1_content_3_1{
+    width: 40%;
+    margin: 5px 5px 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.section_3_1_content_3_2{
+    width: 30%;
+    margin: 5px 5px 5px 5px;
+    padding-left: 50px !important;
+}
+.section_3_1_content_3_3{
+    width: 30%;
+    margin: 5px 0 5px 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
